# stapidoc

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/stapidoc/: __main__.py  stapi.py  stapidoc.mako
