[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stapidoc"
version = "0.1.0"
description = "Static Page Inline Decoder of Choice"
readme = "src/README.md"
authors = [
  { name = "Jonas Santoso", email = "santojo@pm.me" },
]
dependencies = [
	"beautifulsoup4 ~= 4.12",
	"html5lib ~= 1.1",
	"Mako ~= 1.2"
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/santosoj/stapidoc"

[project.scripts]
stapidoc = "stapidoc.__main__:main"